--- a/client/src/components/views/Mineral/Mineral.module.scss
+++ b/client/src/components/views/Mineral/Mineral.module.scss
@@ -88,6 +88,7 @@
     width: 400px;
     height: 400px;
     object-fit: cover;
+    border: solid 1px $color-dark;
     &:hover {
       transform: scale(1.2);
       box-shadow: 0 0px 10px $color-importantDark;
