--- a/client/src/components/views/Product/Product.module.scss
+++ b/client/src/components/views/Product/Product.module.scss
@@ -62,7 +62,7 @@
 
 .productDetailPhotos {
   margin: 48px 0 0 0;
-  padding: 0 0 48px 0;
+  padding: 0 0 48px 0;  
 }
 
 .productDetailPhotos img {
@@ -70,6 +70,7 @@
   height: 300px;
   margin: 0 166px;
   padding: 0 0 0 0;
+  border: solid 1px $color-dark;
 }
 
 .selectQuantity {
