--- a/client/src/components/views/Product/Product.module.scss
+++ b/client/src/components/views/Product/Product.module.scss
@@ -70,7 +70,12 @@
   height: 300px;
   margin: 0 166px;
   padding: 0 0 0 0;
+  object-fit: cover;
   border: solid 1px $color-dark;
+  transition: transform 0.2s;
+  &:hover {
+    transform: scale(1.3);
+  }
 }
 
 .selectQuantity {
