--- a/client/src/components/views/ProductsList/ProductsList.module.scss
+++ b/client/src/components/views/ProductsList/ProductsList.module.scss
@@ -68,7 +68,7 @@
   text-decoration: none;
   width: fit-content;
   background-color: $color-darkblue;
-  padding: 4px 8px;
+  padding: 16px;
   margin-bottom: -50px;
   border: solid 1px $color-light;
   position: relative;
@@ -159,6 +159,8 @@
 .photoInsideMaterial {
   &:hover .clickToExplore {
     opacity: 1;
+    text-decoration: none;
+    color: $color-light;
   }
 }
 
@@ -167,12 +169,12 @@
   font-size: 24px;
   width: fit-content;
   background-color: $color-darkblue;
-  padding: 4px 8px;
+  padding: 16px 16px;
+  box-shadow: 0 0px 10px $color-navyblue;
   border: solid 1px $color-light;
   position: relative;
   z-index: 1;
-  top: -50%;
-  left: 30%;
+  left: 32%;
   opacity: 0;
 }
 
@@ -506,7 +508,11 @@
     z-index: 1;
     margin: 20px 0 0 0;
     left: 25%;
-    opacity: 0;
+    opacity: 1;
+  }
+
+  .mineralText {
+    margin: 60px 0 0 56px;
   }
 }
 
@@ -593,7 +599,13 @@
     .mineralNameContent {
       font-size: 16px;
       text-align: center;
-      margin: -70px 0 52px -60px;
+      margin: -70px 0 52px 0;
+      background-color: $color-light;
+      width: fit-content;
+      left: 45%;
+      padding: 2px 6px;
+      text-align: center;
+      border: solid 1px $color-dark;
     }
   }
 
@@ -611,9 +623,9 @@
     position: relative;
     z-index: 1;
     margin: 20px 0 0 0;
-    left: 38%;
-    top: -150px;
-    opacity: 0;
+    left: 33.3%;
+    top: 20px;
+    opacity: 1;
   }
 }
 
@@ -625,7 +637,13 @@
     .mineralNameContent {
       font-size: 16px;
       text-align: center;
-      margin: -70px 0 52px -60px;
+      margin: -70px 0 52px 0;
+      background-color: $color-light;
+      width: fit-content;
+      left: 38%;
+      padding: 2px 6px;
+      text-align: center;
+      border: solid 1px $color-dark;
     }
   }
 
@@ -643,8 +661,8 @@
     position: relative;
     z-index: 1;
     margin: 20px 0 0 0;
-    left: 38%;
-    top: -150px;
-    opacity: 0;
+    left: 36%;
+    top: 20px;
+    opacity: 1;
   }
 }
