--- a/client/src/components/views/MyOrder/MyOrder.module.scss
+++ b/client/src/components/views/MyOrder/MyOrder.module.scss
@@ -3,7 +3,6 @@
 .root {
   padding: 24px 48px 48px 48px;
   background: $color-lightblue;
-  height: 136vh;
 }
 
 .line {
@@ -163,6 +162,21 @@
 
 .nameOfParameter {
   width: 200px;
+  &:hover {
+    animation: pulse 1s infinite;
+    animation-timing-function: linear;
+  }
+  @keyframes pulse {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
 }
 
 input {
