--- a/client/src/components/views/OrderSent/OrderSent.module.scss
+++ b/client/src/components/views/OrderSent/OrderSent.module.scss
@@ -202,3 +202,32 @@
 }
 
 //////////////////////////////////////////////////////////////////////////////////////////// Media query
+@media (max-width: 767px) {
+  //sm
+
+}
+
+@media (max-width: 411px) {
+  // pixel 2 xl
+
+}
+
+@media (max-width: 568px) {
+  // sm poziom
+
+}
+
+@media (max-width: 768px) {
+  //iPad
+
+}
+
+@media (max-width: 992px) {
+  //lg
+
+}
+
+@media (max-width: 1200px) {
+  //xl
+ 
+}
